--- a/app/css/directives/filterBuilder.less
+++ b/app/css/directives/filterBuilder.less
@@ -117,14 +117,14 @@
     }
 
     .filter {
-        background-color: #e9e9e9;
+        background-color: @main-background-darken;
         border-radius: 4px;
         margin: 5px 0px;
         padding: 5px;
     }
 
     .filter-new {
-        background: none;
+        background-color: @main-background-lighten;
     }
 
     .form-group {
