NEON-1631 Initial prototype for map enhancements:  grayscale map tiles and borderless/translucent points.

--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -154,7 +154,7 @@
     }
 
     .olMap {
-        background-color: #b5d0d0;
+        background-color: #9f9f9f;
         border: @border;
         border-radius: 0 0 4px 4px;
         width: auto !important;
