--- a/app/css/style.less
+++ b/app/css/style.less
@@ -624,6 +624,14 @@ label{
     cursor: default;
 }
 
+.floatLeft {
+    float: left;
+}
+
+.floatRight {
+    float: right;
+}
+
 .navbar{
     margin-bottom: 0;
 
