Updating Gantt Chart for recent merge with master.

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -35,6 +35,7 @@
 @import 'directives/filterBuilder.less';
 @import 'directives/filterState.less';
 @import 'directives/filterTray.less';
+@import 'directives/gantt-chart.less';
 @import 'directives/linechart.less';
 @import 'directives/map.less';
 @import 'directives/queryResultsTable.less';
