--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -16,18 +16,18 @@
 
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Source Node Field</label>
-            <select class="form-control" ng-model="options.selectedNodeField" ng-options="field for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="clearFilters()">
+            <select class="form-control" ng-model="options.selectedNodeField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="clearFilters()">
             </select>
         </div>
 
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Target Node(s) Field</label>
-            <select class="form-control" ng-model="options.selectedLinkField" ng-options="field for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="clearFilters()">
+            <select class="form-control" ng-model="options.selectedLinkField" ng-options="field.prettyName for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="clearFilters()">
                 <option value=""></option>
             </select>
         </div>
         <div class="form-group">
-            <label>Filter on {{options.selectedNodeField}}</label>
+            <label>Filter on {{options.selectedNodeField.prettyName}}</label>
             <select class="form-control" ng-model="options.selectedNode" ng-options="node for node in nodes track by node" ng-required="false" ng-disabled="(nodes.length == 0) || !(options.selectedNodeField)" ng-change="selectNode()">
                 <option value=""></option>
             </select>
@@ -50,7 +50,7 @@
 <div class="clearfix"></div>
 
 <div class="header-container filter-container" ng-show="(filteredNodes.length > 0)">
-    <div class="filter-reset pull-right" ng-repeat="value in filteredNodes" title="{{options.selectedNodeField}}={{value}}">
+    <div class="filter-reset pull-right" ng-repeat="value in filteredNodes" title="{{options.selectedNodeField.prettyField}}={{value}}">
         <span class="filter-label">{{value}}</span>
         <span class="glyphicon glyphicon-remove" ng-click="removeFilter(value)"></span>
     </div>
