--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -1,26 +1,26 @@
 <div class="header-container" ng-show="!(hideHeader)">
     <span class="header-text pull-left">{{options.table.prettyName}}</span>
 
-    <options-menu parent-element="element" export-function="makeCountByExportObject" ng-show="!(hideAdvancedOptions)">
-        <div class="form-group" ng-show="(hideAdvancedOptions)">
-            <label>No Options Available</label>
-        </div>
+    <options-menu parent-element="element" export-function="makeCountByExportObject" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Database</label>
             <select class="form-control" ng-model="options.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
             </select>
         </div>
+
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Table</label>
             <select class="form-control" ng-model="options.table" ng-options="table.prettyName for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFields()">
             </select>
         </div>
+
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Count Field</label>
             <select class="form-control" ng-model="options.field" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields" ng-change="handleChangeField()">
                 <option disabled selected value="">Please choose a field</option>
             </select>
         </div>
+
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Aggregation</label>
             <select class="form-control" ng-model="options.aggregation" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleChangeAggregation()">
@@ -29,10 +29,23 @@
                 <option value="max">Maximum</option>
             </select>
         </div>
+
         <div class="form-group" ng-show="!(hideAdvancedOptions) && (options.aggregation !== 'count')">
             <label>Value Field (Y Axis)</label>
             <select class="form-control" ng-model="options.aggregationField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields" ng-change="handleChangeAggregationField()">
             </select>
+        </div>
+
+        <div class="form-group">
+            <label>Value Limit</label>
+            <div class="input-group">
+                <input type="number" min="1" class="form-control" ng-model="options.limitCount" required>
+                <div class="input-group-btn">
+                    <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="handleChangeLimit()">
+                        <span class="glyphicon glyphicon-refresh"></span>
+                    </button>
+                </div>
+            </div>
         </div>
     </options-menu>
 </div>
@@ -41,7 +54,6 @@
 
 <div class="header-container filter-container">
     <h4 class="pull-left"><span class="count text-primary ng-binding" ng-bind="count"></span> values</h4>
-    <h4 class="pull-right" ng-show="tableOptions.data.length >= options.limitCount">Limited to {{options.limitCount}} rows</h4>
 
     <div class="filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]" title="{{filterSet.key}}={{filterSet.value}}">
         <span class="filter-label">{{filterSet.value}}</span>
